Improve speed of diameter profiling and cache oriented nucleus for quicker charting